Cambios simples en varios archivos

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MQTT_HOST=ws://localhost:8083
-MQTT_USER=
-MQTT_PASS=
+MQTT_HOST=mqtts://f8684078.ala.us-east-1.emqxsl.com:8883
+MQTT_USER=eBicla
+MQTT_PASS=123456
 MQTT_GROUP=ecu
+
 PORT=3000
